--- a/index.html
+++ b/index.html
@@ -1,179 +1,149 @@
 <!doctype html>
 <html lang="es">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Source Sans Pro -->
-  <style>
-  @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
-  </style>
+		<!-- Source Sans Pro -->
+		<style>
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+		</style>
 
-<!--
-  <link rel="stylesheet" href="normalize.css">
--->
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="fonts/valencia-serial/valencia-font.css">
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="fonts/valencia-serial/valencia-font.css">
 
-  <title>Portfolio</title>
-</head>
+		<title>Portfolio</title>
+	</head>
 
-<body>
-  <div class="container" id="primero">
-    <div class="box">
-      <div id="luna"></div>
-      <div class="box-cols">
-        <div id="nombre">
-          Tomás Cetkovich
-        </div>
-      </div>
-      <div class="box-cols">
-          <div id="botones">
-            <img src="img/github.svg" alt="">
-            <img src="img/linkedin.svg" alt="">
-            <img src="img/behance.svg" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="box" id="edificio">
-        <div id="clip1"></div>
-        <div id="clip2"></div>
-        <div id="clip3"></div>
-        <div id="clip4"></div>
-        <canvas id="arbol"></canvas>
-        <canvas class="grass"></canvas>
-        <img id= "marco" src="img/marco.svg" alt="">
-        <div id= "estructura-fondo"></div>
-        <img id= "estructura" src="img/estructura.svg" alt="" draggable="false">
-        <div id="texto-about">
-          Arquitecto
-        </div>
-        <div id="subtexto-about">
-          Acerca de mí
-        </div>
-        <p id="texto-sotano">
-          Fusce tristique consequat dui et vestibulum. Donec id odio sit amet mauris porttitor cursus nec vitae justo. Nullam mollis tristique odio, id tristique ligula vestibulum ut. Nullam semper quis quam bibendum pellentesque. Nunc interdum vitae turpis et maximus. Sed laoreet nisi nibh, at euismod erat bibendum ac. Sed feugiat leo sit amet blandit tempus. Nunc nec nulla libero. Nullam sit amet metus turpis. Donec dignissim accumsan mi vel efficitur. Nunc gravida scelerisque sagittis. Nulla venenatis, erat eu suscipit congue, tellus lorem iaculis nisi, at mattis velit mi eu dui. Nullam tristique semper risus sit amet venenatis. Maecenas pharetra felis sed semper malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      </div>
-      <div class="box">
-        <img src="img/base-recta.svg" alt="">
-      </div>
-  </div>
+	<body>
+		<div class="container" id="primero">
+			<div class="grid-container" id="grid1">
+				<div class="col"></div>
+				<div class="col" id="marco">
+					<object id="edificio" type="image/svg+xml" data="img/imagen-principal.svg"></object>
+					<div class="subgrid">
+						<div id="nombre" class="row">Tomás Cetkovich</div>
+						<div id="animaciones" class="row">
+							<!-- <canvas class="grass"></canvas> -->
+							<canvas id="pasto"></canvas>
+							<canvas id="arbol"></canvas>
+							<div id="luna"></div>
+							<div id="texto-about">Arquitecto</div>
+							<div id="subtexto-about">Acerca de mí</div>
+							<p id="texto-sotano">
+								Fusce tristique consequat dui et vestibulum. Donec id odio sit amet mauris porttitor cursus nec vitae justo. Nullam mollis tristique odio, id tristique ligula vestibulum ut. Nullam semper quis quam bibendum pellentesque. Nunc interdum vitae turpis et maximus. Sed laoreet nisi nibh, at euismod erat bibendum ac. Sed feugiat leo sit amet blandit tempus. Nunc nec nulla libero. Nullam sit amet metus turpis. Donec dignissim accumsan mi vel efficitur. Nunc gravida scelerisque sagittis. Nulla venenatis, erat eu suscipit congue, tellus lorem iaculis nisi, at mattis velit mi eu dui. Nullam tristique semper risus sit amet venenatis. Maecenas pharetra felis sed semper malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						</div>
+					</div>
+				</div>
+				<div class="col"></div>
+			</div>
+		</div>
 
-  <div class="container">
-  <div class="box" id="separador">
-    <img src="img/ipn.svg" alt="" id="ipn">
-  </div>  
-  </div>
+		<div class="grid-container" id="grid2">
+			<object id="separador1" type"image/svg+xml" data="img/ipn.svg"></object>
+			<div id="col1">
+				<div id="titulo-cercha">Experiencia</div>
+				<object id="cercha" type="image/svg+xml" data="img/cercha.svg"></object>
+			</div>
+			<div id="col2">
+				<div id="empotramiento">
+					<div id="texto-empot">
+						2023-2024
+					</div>
+					<object id="empot-svg" type="image/svg+xml" data="img/empotramiento.svg"></object>
+					<div id="titulo-empot">
+						Dibujante proyectista en <i>SES S.A.</i>
+					</div>
+					<div id="texto-empot-body">
+						<ul>
+							<li>Adaptación de planos de licitación a replanteos para proyecto ejecutivo</li>
+							<li>Elaboración de planos conforme a obra</li>
+							<li>Seguimiento periódico de avances de proyecto a través de diálogo con jefes de obra y visitas de obra</li>
+						</ul>
+					</div>
+				</div>
+				<div id="empotramiento">
+					<div id="texto-empot">
+						2022-2023
+					</div>
+					<object id="empot-svg" type="image/svg+xml" data="img/empotramiento.svg"></object>
+					<div id="titulo-empot">
+						Administrativo de obra en <i>SES S.A.</i>
+					</div>
+					<div id="texto-empot-body">
+						<ul>
+							<li>Trato con proveedores</li>
+							<li>Confección y seguimiento de requerimientos de compra</li>
+							<li>Comunicación constante con áreas internas de la empresa</li>
+							<li>Relevamiento e incorporación de avances de los subcontratistas a planos de proyecto ejecutivo</li>
+							<li>Liquidación de quincenas de operarios</li>
+							<li>Liquidación semanal de fondo fijo</li>
+						</ul>
+					</div>
+				</div>
+				<div id="empotramiento">
+					<div id="texto-empot">
+						2021-2022
+					</div>
+					<object id="empot-svg" type="image/svg+xml" data="img/empotramiento.svg"></object>
+					<div id="titulo-empot">
+						Colaborador en <i>Estudio MC&G</i>.
+					</div>
+					<div id="texto-empot-body">
+						<ul>
+							<li>Relevamientos in situ</li>
+							<li>Control diario de avance de tareas</li>
+							<li>Recepción y control de insumos de obra</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="grid-container" id="grid2">
+			<div id="col1">
+				<div id="titulo-cercha">Educación</div>
+				<object id="cercha" type="image/svg+xml" data="img/cercha.svg"></object>
+			</div>
+			<div id="col2">
+				<div id="isostatico">
+					<div id="texto-iso-body">
+						<ul>
+							<li>Bachiller en Letras, ENS N4 “Estanislao Zeballos”</li>
+						</ul>
+					</div>
+					<object id="empot-svg" type="image/svg+xml" data="img/isostatico.svg"></object>
+				</div>
+				<div id="isostatico">
+					<div id="texto-iso-body">
+						<ul>
+							<li><b>desde 2017</b> Estudiante de Arquitectura. FADU, UBA</li>
+							<li><b>2019</b> Pasantía en Plataforma por el Derecho a la Ciudad</li>
+							<li><b>2019-2020</b> Pasantía en formación docente cátedra Lombardi</li>
+							<li><b>2020</b> Pasantía de investigación, <i>Estrategias proyectuales para regenerar áreas de obsolescencia urbana en AMBA</i></li>
+							<li><b>2021</b> Asistente de moderación en <i>XXXV Jornadas de Investigación y XVII Encuentro Regional de la Facultad de Arquitectura, Diseño y Urbanismo, SI + palabras clave</i></li>
+						</ul>
+						<object id="empot-svg" type="image/svg+xml" data="img/isostatico.svg"></object>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="grid-container" id="grid3">
+			<object id="separador2" type"image/svg+xml" data="img/ipn.svg"></object>
+			<div id="proyectos-titulo">PROYECTOS</div>
+			<div id="rectangle"></div>
+			<div id="rectangle"></div>
+			<div id="rectangle"></div>
+			<div id="rectangle"></div>
+			<div id="rectangle"></div>
+			<div id="rectangle"></div>
+		</div>
 
-  <div class="container">
-    <div class="box" id="experiencia">
-      <div class="box" id="cercha">
-        <div id="titulo-cercha">
-          Experiencia
-        </div>
-        <img src="img/cercha.svg" alt="">
-      </div>
-      <div class="box" id="lista-empotramiento">
-        <div class="box" id="empotramiento">
-          <div id="texto-empot">
-            desde 2018
-          </div>
-          <img src="img/empotramiento.svg" alt="" id="empot-svg">
-          <div id="texto-empot-body">
-            Clases particulares de AutoCAD, trabajos de modelado y renderizado 3D en modalidad freelance.
-          </div>
-        </div>
-        <div class="box" id="empotramiento">
-          <div id="texto-empot">
-            2021-2022
-          </div>
-          <img src="img/empotramiento.svg" alt="" id="empot-svg">
-          <div id="texto-empot-body">
-            Colaborador en <i>Estudio MC&G</i>. Tareas de relevamiento/replanteo, asistencia de obra y seguimiento de cuentas.
-          </div>
-        </div>
-        <div class="box" id="empotramiento">
-          <div id="texto-empot">
-            desde 2022
-          </div>
-          <img src="img/empotramiento.svg" alt="" id="empot-svg">
-          <div id="texto-empot-body">
-            Administrativo de obra en <i>SES SA</i>.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-  <div class="box" id="separador">
-    <img src="img/ipn.svg" alt="" id="ipn">
-  </div>  
-  </div>
-
-    <div class="container">
-    <div class="box" id="experiencia">
-      <div class="box" id="cercha">
-        <div id="titulo-cercha">
-          Educación
-        </div>
-        <img src="img/cercha.svg" alt="">
-      </div>
-      <div class="box" id="lista-empotramiento">
-        <div class="box" id="empotramiento">
-          <div id="texto-iso-body">
-            Bachiller en Letras, ENS N4 “Estanislao Zeballos”
-          </div>
-          <img src="img/isostatico.svg" alt="" id="empot-svg">
-        </div>
-        <div class="box" id="empotramiento">
-          <div id="texto-iso-body">
-            <b>desde 2017</b> Estudiante de Arquitectura. FADU, UBA
-          </div>
-          <div id="texto-iso-body">
-            <b>2019</b> Pasantía en Plataforma por el Derecho a la Ciudad
-          </div>
-          <div id="texto-iso-body">
-            <b>2019-2020</b> Pasantía en formación docente cátedra Lombardi
-          </div>
-          <div id="texto-iso-body">
-            <b>2020</b> Pasantía de investigación, <i>Estrategias proyectuales para regenerar áreas de obsolescencia urbana en AMBA</i>
-          </div>
-          <div id="texto-iso-body">
-            <b>2021</b> Asistente de moderación en <i>XXXV Jornadas de Investigación y XVII Encuentro Regional de la Facultad de Arquitectura, Diseño y Urbanismo, SI + palabras clave</i>
-          </div>
-          <img src="img/isostatico.svg" alt="" id="empot-svg">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-  <div class="box" id="separador">
-    <img src="img/ipn.svg" alt="" id="ipn">
-  </div>  
-  </div>
-
-  <div class="container">
-    <div class="box" id="proyectos-titulo">
-      PROYECTOS
-    </div>  
-  <div class="box" id="cartelitos">
-    <div class="box" id="rectangle"></div>
-    <div class="box" id="rectangle"></div>
-    <div class="box" id="rectangle"></div>
-  </div>  
-  <div class="box" id="cartelitos">
-    <div class="box" id="rectangle"></div>
-    <div class="box" id="rectangle"></div>
-    <div class="box" id="rectangle"></div>
-  </div>  
-  </div>
-
-  <script src="topiary.js"></script>
-  <script src="grass.js"></script>
-</body>
+		<script src="topiary.js"></script>
+		<script src="grass.js"></script>
+		<script src="edificio.js"></script>
+	</body>
 
 </html>
